<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="settings">Настройки</string>
    <string name="mediateka" translatable="false">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="agree" translatable="false">Пользовательское соглашение</string>
    <string name="share_message" translatable="false">Привет! Приложение сделано во время учебы на курсе по Андроид-разработке:</string>
    <string name="curse_email" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="mymail" translatable="false">WhiteRobbit@yandex.ru</string>
    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="test" translatable="false">ajjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update" translatable="true">Обновить</string>
    <string name="dark_mode" translatable="true">Темная тема</string>
    <string name="you_search" translatable="true">Вы искали</string>
    <string name="clear_histori" translatable="true">Очистить историю</string>
    <string name="country" translatable="false">Страна</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="duration" translatable="false">Длительность</string>
    <string name="year" translatable="false">Год</string>
    <string name="albom" translatable="false">Альбом</string>
    <string name="time" translatable="false">00:30</string>
    <string name="check_internet_connection" translatable="false">Проверьте подключение к интернету</string>
    <string name="network_error" translatable="false">Ошибка сервера</string>
    <string name="track_unavailable" translatable="false">трек не доступен</string>
    <string name="like_is_null" translatable="false">Ваша медиатека пуста</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="creat" translatable="false">Создать</string>
    <string name="title" translatable="false">Название*</string>
    <string name="description" translatable="false">Описание</string>
    <string name="end_create_pleylist" translatable="false">Завершить создание плейлиста?</string>
    <string name="data_has_been_delete" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="cancel" translatable="false">Отмена</string>
    <string name="end" translatable="false">Завершить</string>
    <string name="playlist_has_been_create" translatable="false">Плейлист создан</string>
    <string name="playlist" translatable="false">Плейлисты</string>
    <string name="selected_track" translatable="false">Избранные треки</string>
    <string name="kek_error_message" translatable="false">Произошла ошибка, попробуйте переустановить приложение )))</string>
    <string name="add_in_playlist__" translatable="false">Добавлено в плейлист</string>
    <string name="track_in_playlist__" translatable="false">Трек уже добавлен в плейлист</string>
    <string name="playlist_is_null" translatable="false">Вы не создали \n ни одного плейлиста</string>
    <string name="mediateca_is_null" translatable="false">Ваша медиатека пуста</string>
    <string name="add_in_playlist" translatable="false">Добавить в плейлист</string>
    <string name="delete" translatable="false">Удалить</string>
    <string name="no" translatable="false">Нет</string>
    <string name="yes" translatable="false">Да</string>


    <plurals name="track_count" translatable="false">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>


    <string name="delete_track" translatable="false">Удалить трек</string>
    <string name="delete_track_description" translatable="false">Вы уверены, что хотите удалить трек из пелйлиста?</string>
    <string name="share_playlist" translatable="false">Поделиться плейлистом</string>
    <string name="track_in_playlist_is_empty" translatable="false">В плейлисте нет треков</string>
    <string name="share_playlist_null" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="sharing" translatable="false">Поделиться</string>
    <string name="delete_playlist" translatable="false">Удалить плейлист</string>
    <string name="delete_playlist_description" translatable="false">Хотите удалить плейлист?</string>
    <string name="redact_info" translatable="false">Редактировать информацию</string>


</resources>