<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white_black"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white_black"

        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTitleText"/>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwither"
        style="@style/swith_onoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingVertical="21dp"
        android:layout_marginTop="24dp"
        android:text="@string/dark_mode"
        android:textSize="@dimen/text_16"/>



    <!-- Поделиться приложением -->
    <TextView
        android:id="@+id/share_btn"
        style="@style/TextButtonSettings"
        android:text="@string/share"
        android:drawableEnd="@drawable/share"
        android:paddingEnd="16dp"/>


    <!-- Написать в поддержку -->
    <TextView
        android:id="@+id/support_btn"
        style="@style/TextButtonSettings"
        android:text="@string/support"
        android:drawableEnd="@drawable/support"
        android:paddingEnd="14dp"/>


    <!-- Пользовательское соглашение -->
    <TextView
        android:id="@+id/agree_btn"
        style="@style/TextButtonSettings"
        android:text="@string/agree"
        android:drawableEnd="@drawable/strelka"
        android:paddingEnd="20dp"/>



</LinearLayout>