<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/BackgraundSettings">
    <FrameLayout
        style="@style/BackgraundSettings"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/head_back"
            android:id="@+id/btn_settings_back"
            android:src="@drawable/back"/>

        <TextView
            style="@style/head_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>
    </FrameLayout>


    <!-- Темная тема -->
    <LinearLayout
        style="@style/BackgraundSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Switch
            style="@style/swith_onoff"
            android:text="Темная тема"
            android:paddingLeft="16dp"
            android:paddingVertical="21dp"
            android:textSize="@dimen/text_btn_settings"
            android:id="@+id/themeSwither"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Поделиться приложением -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingRight="12dp"
        style="@style/BackgraundSettings">
        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/share"/>
        <ImageView
            style="@style/imageButtonSettings"
            android:src="@drawable/share"/>

    </LinearLayout>

    <!-- Написать в поддержку -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingRight="12dp"
        style="@style/BackgraundSettings">

        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/support"/>

        <ImageView
            style="@style/imageButtonSettings"
            android:src="@drawable/support"/>
    </LinearLayout>

    <!-- Пользовательское соглашение -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingRight="12dp"
        style="@style/BackgraundSettings">

        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/agree" />

        <ImageView
            style="@style/imageButtonSettings"
            android:src="@drawable/strelka"/>
    </LinearLayout>

<!--


    &lt;!&ndash;тЕСТ&ndash;&gt;
    &lt;!&ndash; Поделиться приложением &ndash;&gt;
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        style="@style/BackgraundSettings">

        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/share"
            android:drawableEnd="@drawable/share"
            android:paddingRight="16dp"/>
    </LinearLayout>

    &lt;!&ndash; Написать в поддержку &ndash;&gt;
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        style="@style/BackgraundSettings">

        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/support"
            android:drawableEnd="@drawable/support"
            android:paddingRight="14dp"/>
    </LinearLayout>

    &lt;!&ndash; Пользовательское соглашение &ndash;&gt;
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        style="@style/BackgraundSettings">
        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/agree"
            android:drawableEnd="@drawable/strelka"
            android:paddingRight="20dp"/>
    </LinearLayout>

-->

</LinearLayout>